<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.skeletonapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.skeletonapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <navigation
        android:id="@+id/navigation_feature"
        app:startDestination="@+id/navigation_fragment_feature">

        <fragment
            android:id="@+id/navigation_fragment_feature"
            android:name="com.example.skeletonapp.ui.feature.FeatureFragment"
            android:label="@string/title_feature"
            tools:layout="@layout/fragment_feature">
            <action
                android:id="@+id/action_navigation_feature_to_navigation_nested_fragment"
                app:destination="@id/navigation_slider_input_fragment" />
        </fragment>

        <fragment
            android:id="@+id/navigation_slider_input_fragment"
            android:name="com.example.skeletonapp.ui.feature.sliderInputFragment.SliderInputFragment"
            android:label="@string/title_slider_input_fragment"
            tools:layout="@layout/fragment_slider_input" />

    </navigation>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.skeletonapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>